--- a/src/template-style.css
+++ b/src/template-style.css
@@ -1,6 +1,10 @@
-/* Default Template Styles */
+/* Default Template Styles 
 
-/* Typography */
+!!! DELETE BEFORE SHIP !!!
+
+Using this as a pallet for css styling 
+
+Typography */
 body {
   background: #fff;
 }
