--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,4 +1,23 @@
-.img {
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 10vh;
+  background: #e5d9ba;
+  color: white;
+}
+
+.nav-links {
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+}
+
+img {
   width: 100%;
   height: auto;
+  align-items: center;
+  justify-content: space-around;
 }
